Update dossier security continue

--- a/modules/backend-dossiermgt/backend-dossiermgt-service/src/main/resources/constants.properties
+++ b/modules/backend-dossiermgt/backend-dossiermgt-service/src/main/resources/constants.properties
@@ -33,6 +33,8 @@ org.opencps.value.gov.agency=GOVERNMENT_AGENCY
 org.opencps.value.bussiness.domain=BUSINESS_DOMAIN
 org.opencps.value.activity.type=ACTIVITY_TYPE
 org.opencps.value.document.type=DOCUMENT_TYPE
+org.opencps.value.vnpost.city=VNPOST_CITY_CODE
+org.opencps.value.register.book=REGISTER_BOOK
 
 #VNPOST
 org.opencps.token.url=https://api.ngsp.gov.vn/token
@@ -58,6 +60,9 @@ org.opencps.contenttype.image=image/
 org.opencps.contenttype.png=image/png
 org.opencps.contenttype.pdf=application/pdf
 org.opencps.contenttype.json=application/json
+org.opencps.contenttype.form.urlencode=application/x-www-form-urlencoded
+org.opencps.contenttype.msword=application/msword
+org.opencps.screct.v2=OPENCPSV2
 #Role
 org.opencps.role.admin=Administrator
 org.opencps.role.admin.data=Administrator_data
@@ -74,6 +79,17 @@ org.opencps.status.new=new
 org.opencps.status.cancelling=cancelling
 org.opencps.status.correcting=correcting
 org.opencps.status.submitting=submitting
+org.opencps.status.interoperating=interoperating
+org.opencps.status.receiving=receiving
+org.opencps.status.waiting=waiting
+org.opencps.status.processing=processing
+org.opencps.status.pausing=pausing
+org.opencps.status.posting=posting
+org.opencps.status.releasing=releasing
+org.opencps.status.denied=denied
+org.opencps.status.unresolved=unresolved
+org.opencps.status.cancelled=cancelled
+
 org.opencps.user.admin=admin
 org.opencps.search.sort=_sortable
 org.opencps.search.numbersort=_Number_sortable
@@ -96,3 +112,45 @@ org.opencps.value.permission.write=write
 org.opencps.value.pre.agency=agency
 org.opencps.value.pre.template=template
 org.opencps.value.pre.service=service
+org.opencps.value.action.fix=9100
+org.opencps.value.base.url=http://webservices.keypay.vn/resources
+org.opencps.value.base.urljson=http://webservices.keypay.vn/jsonresources
+#Character
+org.opencps.value.character.zero=0
+org.opencps.value.character.one=1
+org.opencps.value.character.two=2
+org.opencps.value.character.three=3
+org.opencps.value.character.four=4
+org.opencps.value.character.five=5
+org.opencps.value.character.six=6
+org.opencps.value.character.seven=7
+org.opencps.value.character.eight=8
+org.opencps.value.character.night=9
+org.opencps.value.character.a=A
+org.opencps.value.character.b=B
+org.opencps.value.character.c=C
+org.opencps.value.character.d=D
+org.opencps.value.character.e=E
+org.opencps.value.character.f=F
+org.opencps.value.text.markupcase.d=Đ
+org.opencps.value.text.upcase.d=D
+org.opencps.value.text.marklowercase.d=đ
+org.opencps.value.text.lowercase.d=d
+org.opencps.value.text.con=Còn 
+org.opencps.value.text.qua=Quá 
+org.opencps.value.text.day=ngày 
+org.opencps.value.patern.dossierno=opencps.dossier#
+org.opencps.value.default.url.proxy=http://127.0.0.1:8080
+org.opencps.value.multimedia=MULTIMEDIA
+org.opencps.value.duplicate=duplicate
+org.opencps.value.jcaptcha.response=j_captcha_response
+org.opencps.value.fileattach.desc=FileAttach file upload
+org.opencps.value.fileattach.destination=FileAttach/
+org.opencps.value.class.adminconfig=opencps_adminconfig
+org.opencps.value.class.employee=opencps_employee
+org.opencps.value.class.deliverabletype=opencps_deliverabletype
+org.opencps.value.class.applicant=opencps_applicant
+org.opencps.value.class.applicantesign=org.opencps.usermgt.model.ApplicantEsign
+org.opencps.value.class.deliverable=opencps_deliverable
+org.opencps.value.class.filetemplates=opencps_services_filetemplates
+
