--- a/modules/backend-dossiermgt/backend-dossiermgt-service/build.gradle
+++ b/modules/backend-dossiermgt/backend-dossiermgt-service/build.gradle
@@ -27,7 +27,8 @@ dependencies {
 
 	compileOnly project(":modules:backend-admin-config:backend-admin-config-api")
 	compileOnly project(":modules:backend-admin-config:backend-admin-config-service")
-
+	// https://mvnrepository.com/artifact/org.apache.commons/commons-text
+	compileOnly group: 'org.apache.commons', name: 'commons-text', version: '1.8'
 	testCompile group: "junit", name: "junit", version: "4.12"
 }	
 
