Add report role

--- a/modules/backend-api-rest/src/main/resources/content/Language.properties
+++ b/modules/backend-api-rest/src/main/resources/content/Language.properties
@@ -69,3 +69,10 @@ api.viewrooturi=/web/%s
 serviceprocess.message.duplicatestepnoexception=DuplicateStepNoException
 vgca.urlpath=%s://%d%s
 datacer.path=%s/data/cer/%s.png
+dossier.message.secretkeynotsuccess=secretKey not sucess
+dossier.message.notfound=No find dossier is delete
+dossieraction.message.cannotdoaction=Lỗi xảy ra không thể thực hiện hành động!
+dossier.message.khongtimthay=Không tìm thấy hồ sơ
+processsequence.message.processing=Đang thực hiện: %s
+processsequence.message.undue=Còn %d ngày
+processsequence.message.overdue=Quá %d ngày
