Update properties resource editor

--- a/modules/backend-api-rest/src/main/resources/content/Language.properties
+++ b/modules/backend-api-rest/src/main/resources/content/Language.properties
@@ -1,78 +1,113 @@
-chao=Chào
-barcode.filename=barcode/%s.png
-attachment.filename=attachment; filename="%s"
-inline.filename=inline; filename="%s"
-http.header.bearer=Bearer %s
-http.header.basicauth=Basic %s
-query.sort=%s_sortable
-query.number.sort=%s_Number_sortable
-query.string.sort=%s_String_sortable
-ngsp.ctdn.message.notfound=Không tìm thấy thông tin doanh nghiệp
-ngsp.ctdn.message.notcorrect=Thông tin tên doanh nghiệp có thể chưa đúng!
-ngsp.ctdn.message.representatives.notcorrect=Chủ sở hữu doanh nghiệp có thể thông tin chưa chính xác!
-jcaptcha.filename=jcaptcha/%s.png
-jcaptcha.message.notcorrect=Captcha incorrect
-jcaptcha.description.notcorrect=Captcha incorrect
-api.permission.message.nothavepermission=User not permission process!
-api.message.filenotfound=file not found!
-citizen.dantoc.default=Không rõ
-citizen.nhommau.default=00
-citizen.quoctich.default=Viet Nam
-backupmaster.filename=backupmaster%d.zip
-dict.filename=dicts/%s.xml
-report.filename=reports/%s.xml
-report.template.part.filename=reports/%s_%s.xml
-form.template.part.filename=forms/%s_%s.json
-form.filename=forms/%s.json
-serviceinfo.filename=services/%s.xml
-servicefiletemplate.filename=files/%s
-template.filename=templates/%s.xml
-process.filename=processes/%s.xml
-cache.groupid=groupId_%d
-cert.message.duplicate=%s đã tồn tại trong hệ thống
-api.json.status.done=done
-api.json.status.error=error
-api.json.nocontent=No Content
-api.json.message.nonauthorative=Non-Authoritative Information.
-api.json.message.internalservererror=Internal Server Error
-api.json.message.notfound=NotFoundException
-api.json.message.requestbodyincorrect=request body incorrect
-api.json.message.authenticatedfailure=authentication failed
-api.json.message.cannotgetuserinfo=can't get user info
-attachment.file.xsh.extension=text/x-sh
-attachment.file.macbinary.extension=application/macbinary
-attachment.file.msdownload.extension=application/x-msdownload
-api.json.comment.message.removesuccess=remove success
-api.message.notfound=not found!
-api.data.defaultsignature.success=success
-api.data.defaultsignature.fileEntryId=fileEntryId
-dossieraction.overdue=Quá hạn
-dossieraction.undue=Còn
-dossieraction.stepoverdue=%s %.3f giờ
-dossieractionuser.usernotexists=Dossier action user already exists!
-dossieractionuser.dossiernotexists=Dossier not exists!
-dossierdocument.message.previewrenderingnotavailable=Preview rendering not avariable
-dossierdocument.message.dossierwasnotonprocess=The dossier wasn't on process
-dossierdocument.message.cannotgetdossierwithid=Cant get dossier with id_%d
-api.message.groupidnotexists=GroupId not exits!
-dossierfile.message.fileformaterror=File attach error format!
-dossierfile.message.folderisnotstructure=Folder is not structure
-dossiertemplate.message.notfound=No DossierTemplate was found
-eform.message.secretkeynotsuccess=secretKey not success
-eform.message.noeformexists=No eform exits
-api.json.message.captchaincorrect=Captcha incorrect
-api.json.message.errorprocessdatabase=Error process database
-api.json.message.deletesuccess=Delete is success!
-api.json.message.deletefailure=Delete is false!
-employee.profilepath=/image/user_%s/_portrait?img_id=%d&t=%d
-api.viewrooturi=/web/%s
-serviceprocess.message.duplicatestepnoexception=DuplicateStepNoException
-vgca.urlpath=%s://%d%s
-datacer.path=%s/data/cer/%s.png
-dossier.message.secretkeynotsuccess=secretKey not sucess
-dossier.message.notfound=No find dossier is delete
-dossieraction.message.cannotdoaction=Lỗi xảy ra không thể thực hiện hành động!
-dossier.message.khongtimthay=Không tìm thấy hồ sơ
-processsequence.message.processing=Đang thực hiện: %s
-processsequence.message.undue=Còn %d ngày
-processsequence.message.overdue=Quá %d ngày
+
+api.data.defaultsignature.fileEntryId    = fileEntryId
+api.data.defaultsignature.success        = success
+api.json.comment.message.removesuccess   = remove success
+api.json.message.authenticatedfailure    = authentication failed
+api.json.message.cannotgetuserinfo       = can't get user info
+api.json.message.captchaincorrect        = Captcha incorrect
+api.json.message.deletefailure           = Delete is false!
+api.json.message.deletesuccess           = Delete is success!
+api.json.message.errorprocessdatabase    = Error process database
+api.json.message.internalservererror     = Internal Server Error
+api.json.message.nonauthorative          = Non-Authoritative Information.
+api.json.message.notfound                = NotFoundException
+api.json.message.requestbodyincorrect    = request body incorrect
+api.json.nocontent                       = No Content
+api.json.status.done                     = done
+api.json.status.error                    = error
+api.message.filenotfound                 = file not found!
+api.message.groupidnotexists             = GroupId not exits!
+api.message.notfound                     = not found!
+api.permission.message.nothavepermission = User not permission process!
+api.viewrooturi                          = /web/%s
+
+attachment.file.macbinary.extension  = application/macbinary
+attachment.file.msdownload.extension = application/x-msdownload
+attachment.file.xsh.extension        = text/x-sh
+attachment.filename                  = attachment; filename="%s"
+
+backupmaster.filename = backupmaster%d.zip
+
+barcode.filename = barcode/%s.png
+
+cache.groupid = groupId_%d
+
+cert.message.duplicate = %s \u0111\u00E3 t\u1ED3n t\u1EA1i trong h\u1EC7 th\u1ED1ng
+
+chao = Ch\u00E0o \u0111ang th\u1EF1c hi\u1EC7n
+
+citizen.dantoc.default   = Kh\u00F4ng r\u00F5
+citizen.nhommau.default  = 00
+citizen.quoctich.default = Viet Nam
+
+datacer.path = %s/data/cer/%s.png
+
+dict.filename = dicts/%s.xml
+
+dossier.message.cannotupdateduedate                  = Kh\u00F4ng update \u0111\u01B0\u1EE3c dueDate c\u1EE7a h\u1ED3 s\u01A1
+dossier.message.dossiernotinprocess                  = Dossier is not in process!
+dossier.message.khongtimthay                         = Kh\u00F4ng t\u00ECm th\u1EA5y h\u1ED3 s\u01A1
+dossier.message.notfound                             = No find dossier is delete
+dossier.message.secretkeynotsuccess                  = secretKey not sucess
+dossier.message.stepnotfound                         = Not found step!
+
+dossieraction.message.cannotdoaction = L\u1ED7i x\u1EA3y ra kh\u00F4ng th\u1EC3 th\u1EF1c hi\u1EC7n h\u00E0nh \u0111\u1ED9ng!
+dossieraction.overdue                = Qu\u00E1 h\u1EA1n
+dossieraction.stepoverdue            = %s %.3f gi\u1EDD\u009D
+dossieraction.undue                  = C\u00F2n
+
+dossieractionuser.dossiernotexists = Dossier not exists!
+dossieractionuser.usernotexists    = Dossier action user already exists!
+
+dossierdocument.message.cannotgetdossierwithid       = Cant get dossier with id_%d
+dossierdocument.message.dossierwasnotonprocess       = The dossier wasn't on process
+dossierdocument.message.previewrenderingnotavailable = Preview rendering not avariable
+
+dossierfile.message.fileformaterror      = File attach error format!
+dossierfile.message.folderisnotstructure = Folder is not structure
+
+dossiertemplate.message.notfound = No DossierTemplate was found
+
+eform.message.noeformexists       = No eform exits
+eform.message.secretkeynotsuccess = secretKey not success
+
+employee.profilepath = /image/user_%s/_portrait?img_id=%d&t=%d
+
+form.filename               = forms/%s.json
+form.template.part.filename = forms/%s_%s.json
+
+http.header.basicauth = Basic %s
+http.header.bearer    = Bearer %s
+
+inline.filename = inline; filename="%s"
+
+jcaptcha.description.notcorrect = Captcha incorrect
+jcaptcha.filename               = jcaptcha/%s.png
+jcaptcha.message.notcorrect     = Captcha incorrect
+
+ngsp.ctdn.message.notcorrect                 = Th\u00F4ng tin t\u00EAn doanh nghi\u1EC7p c\u00F3 th\u1EC3 ch\u01B0a \u0111\u00FAng!
+ngsp.ctdn.message.notfound                   = Kh\u00F4ng t\u00ECm th\u1EA5y th\u00F4ng tin doanh nghi\u1EC7p
+ngsp.ctdn.message.representatives.notcorrect = Ch\u1EE7 s\u1EDF h\u1EEFu doanh nghi\u1EC7p c\u00F3 th\u1EC3 th\u00F4ng tin ch\u01B0a ch\u00EDnh x\u00E1c!
+
+process.filename                   = processes/%s.xml
+
+processsequence.message.overdue    = Qu\u00E1 %d ng\u00E0y
+processsequence.message.processing = \u0110ang th\u1EF1c hi\u1EC7n: %s
+processsequence.message.undue      = C\u00F2n %d ng\u00E0y
+
+query.number.sort = %s_Number_sortable
+query.sort        = %s_sortable
+query.string.sort = %s_String_sortable
+
+report.filename               = reports/%s.xml
+report.template.part.filename = reports/%s_%s.xml
+
+servicefiletemplate.filename = files/%s
+
+serviceinfo.filename = services/%s.xml
+
+serviceprocess.message.duplicatestepnoexception = DuplicateStepNoException
+
+template.filename = templates/%s.xml
+
+vgca.urlpath = %s://%d%s
