--- a/modules/backend-api-rest/src/main/resources/content/Language.properties
+++ b/modules/backend-api-rest/src/main/resources/content/Language.properties
@@ -20,6 +20,10 @@ api.message.groupidnotexists             = GroupId not exits!
 api.message.notfound                     = not found!
 api.permission.message.nothavepermission = User not permission process!
 api.viewrooturi                          = /web/%s
+api.message.processdberror				 = Error process database
+api.message.groupidnotexists			 = GroupId not exits!
+
+import.message.collectionnotingroup		 = %s is not exits in group %d
 
 attachment.file.macbinary.extension  = application/macbinary
 attachment.file.msdownload.extension = application/x-msdownload
