Update system security

--- a/modules/backend-api-rest/src/main/resources/content/Language.properties
+++ b/modules/backend-api-rest/src/main/resources/content/Language.properties
@@ -18,12 +18,9 @@ api.json.status.error                    = error
 api.message.filenotfound                 = file not found!
 api.message.groupidnotexists             = GroupId not exits!
 api.message.notfound                     = not found!
+api.message.processdberror               = Error process database
 api.permission.message.nothavepermission = User not permission process!
 api.viewrooturi                          = /web/%s
-api.message.processdberror				 = Error process database
-api.message.groupidnotexists			 = GroupId not exits!
-
-import.message.collectionnotingroup		 = %s is not exits in group %d
 
 attachment.file.macbinary.extension  = application/macbinary
 attachment.file.msdownload.extension = application/x-msdownload
@@ -83,6 +80,8 @@ form.template.part.filename = forms/%s_%s.json
 http.header.basicauth = Basic %s
 http.header.bearer    = Bearer %s
 
+import.message.collectionnotingroup = %s is not exits in group %d
+
 inline.filename = inline; filename="%s"
 
 jcaptcha.description.notcorrect = Captcha incorrect
@@ -111,6 +110,19 @@ servicefiletemplate.filename = files/%s
 serviceinfo.filename = services/%s.xml
 
 serviceprocess.message.duplicatestepnoexception = DuplicateStepNoException
+
+system.message.actionconfigmissingerror  = Thi\u1EBFu c\u1EA5u h\u00ECnh ActionConfig
+system.message.configerror               = D\u1EEF li\u1EC7u c\u1EA5u h\u00ECnh c\u00F3 l\u1ED7i!
+system.message.configsuccess             = D\u1EEF li\u1EC7u c\u1EA5u h\u00ECnh kh\u00F4ng c\u00F3 l\u1ED7i!
+system.message.configwarning             = D\u1EEF li\u1EC7u c\u1EA5u h\u00ECnh kh\u00F4ng c\u00F3 l\u1ED7i, nh\u01B0ng c\u00F3 nhi\u1EC1u c\u1EA3nh b\u00E1o c\u00F3 th\u1EC3 h\u1EC7 th\u1ED1ng ho\u1EA1t \u0111\u1ED9ng kh\u00F4ng \u1ED5n \u0111\u1ECBnh!!!
+system.message.documenttypeerror         = C\u1EA5u h\u00ECnh DocumentType %s c\u1EE7a thao t\u00E1c %s %s-%s ch\u01B0a c\u00F3 m\u1EABu phi\u1EBFu
+system.message.documenttypejaspererror   = C\u1EA5u h\u00ECnh DocumentType %s c\u1EE7a thao t\u00E1c %s %s-%s ch\u01B0a c\u00F3 m\u1EABu JASPER phi\u1EBFu
+system.message.formconfigerror           = C\u1EA5u h\u00ECnh FormConfig c\u1EE7a thao t\u00E1c %s-%s ph\u1EA3i c\u00F3 ki\u1EC3u JSON chu\u1EA9n
+system.message.menuconfigerror           = Thi\u1EBFu c\u1EA5u h\u00ECnh MenuConfig
+system.message.notificationtemplateerror = C\u1EA5u h\u00ECnh Notificationtemplate %s c\u1EE7a thao t\u00E1c %s %s-%s ch\u01B0a c\u00F3 m\u1EABu g\u1EEDi th\u00F4ng b\u00E1o
+system.message.serverconfigerror         = Thi\u1EBFu c\u1EA5u h\u00ECnh ServerConfig
+system.message.serviceconfigerror        = C\u1EA5u h\u00ECnh d\u1ECBch v\u1EE5 c\u00F4ng g\u1EAFn v\u1EDBi th\u1EE7 t\u1EE5c h\u00E0nh ch\u00EDnh sai %d
+system.message.stepconfigerror           = Thi\u1EBFu c\u1EA5u h\u00ECnh StepConfig
 
 template.filename = templates/%s.xml
 
