Update statistic api security

--- a/modules/backend-api-rest/src/main/resources/content/Language.properties
+++ b/modules/backend-api-rest/src/main/resources/content/Language.properties
@@ -111,6 +111,15 @@ serviceinfo.filename = services/%s.xml
 
 serviceprocess.message.duplicatestepnoexception = DuplicateStepNoException
 
+sms.message.accesstokenurl    = /v2.0/oa/getprofile?access_token=%s&data=%s
+sms.message.searchdeliverable = \ AND %s_data: *%s*
+sms.message.systemnotconfig   = 0;72;He thong chua cau hinh;
+sms.message.zaloapiurl        = https://openapi.zalo.me
+
+statistic.message.coming  = S\u1EAFp \u0111\u1EBFn h\u1EA1n
+statistic.message.delay   = Ch\u1EADm h\u1EA1n
+statistic.message.overdue = Qu\u00E1 h\u1EA1n
+
 system.message.actionconfigmissingerror  = Thi\u1EBFu c\u1EA5u h\u00ECnh ActionConfig
 system.message.configerror               = D\u1EEF li\u1EC7u c\u1EA5u h\u00ECnh c\u00F3 l\u1ED7i!
 system.message.configsuccess             = D\u1EEF li\u1EC7u c\u1EA5u h\u00ECnh kh\u00F4ng c\u00F3 l\u1ED7i!
