Update deliverable API security

--- a/modules/backend-api-rest/src/main/resources/content/Language.properties
+++ b/modules/backend-api-rest/src/main/resources/content/Language.properties
@@ -48,9 +48,17 @@ dict.filename = dicts/%s.xml
 dossier.message.cannotupdateduedate                  = Kh\u00F4ng update \u0111\u01B0\u1EE3c dueDate c\u1EE7a h\u1ED3 s\u01A1
 dossier.message.dossiernotinprocess                  = Dossier is not in process!
 dossier.message.khongtimthay                         = Kh\u00F4ng t\u00ECm th\u1EA5y h\u1ED3 s\u01A1
+dossier.message.lockover3                            = Y\u00EAu c\u1EA7u b\u1ED5 sung qu\u00E1 h\u1EA1n 3 ng\u00E0y
+dossier.message.lockunder3                           = Y\u00EAu c\u1EA7u b\u1ED5 sung trong h\u1EA1n 3 ng\u00E0y
 dossier.message.notfound                             = No find dossier is delete
+dossier.message.ontime                               = \u0110\u00FAng h\u1EA1n
+dossier.message.overdue                              = Qu\u00E1 h\u1EA1n
+dossier.message.overdue.withvariable                 = Qu\u00E1 %s
+dossier.message.pause                                = T\u1EA1m d\u1EEBng x\u1EED l\u00FD
 dossier.message.secretkeynotsuccess                  = secretKey not sucess
 dossier.message.stepnotfound                         = Not found step!
+dossier.message.undue                                = S\u1EDBm h\u1EA1n
+dossier.message.undue.withvariable                   = C\u00F2n %s
 
 dossieraction.message.cannotdoaction = L\u1ED7i x\u1EA3y ra kh\u00F4ng th\u1EC3 th\u1EF1c hi\u1EC7n h\u00E0nh \u0111\u1ED9ng!
 dossieraction.overdue                = Qu\u00E1 h\u1EA1n
