--- a/modules/backend-usermgt/backend-usermgt-service/build.gradle
+++ b/modules/backend-usermgt/backend-usermgt-service/build.gradle
@@ -24,6 +24,14 @@ dependencies {
 	compileOnly group: "javax.ws.rs", name: "javax.ws.rs-api", version: "2.0.1"
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "2.0.0"
+	
+	compileInclude name : "simplecaptcha-1.2.1", transitive:false
+}
+
+repositories {
+    flatDir {
+        dirs 'lib'
+    }
 }
 
 buildService {
