--- a/modules/dvcqg-sso/src/main/webapp/WEB-INF/web.xml
+++ b/modules/dvcqg-sso/src/main/webapp/WEB-INF/web.xml
@@ -23,8 +23,8 @@
 
 	<security-constraint>
 		<web-resource-collection>
-			<web-resource-name>FreeMarker MVC Views</web-resource-name>
-			<url-pattern>*.ftl</url-pattern>
+			<web-resource-name>JSP MVC Views</web-resource-name>
+			<url-pattern>*.jsp</url-pattern>
 		</web-resource-collection>
 		<auth-constraint>
 			<!-- Nobody is allowed to visit these -->
