--- a/modules/backend-gogoshell-tool/build.gradle
+++ b/modules/backend-gogoshell-tool/build.gradle
@@ -7,4 +7,8 @@ dependencies {
     
     compileOnly project(":modules:backend-usermgt:backend-usermgt-api")
 	compileOnly project(":modules:backend-usermgt:backend-usermgt-service")
+	
+	compileOnly project(":modules:backend-dossiermgt:backend-dossiermgt-service")
+	compileOnly project(":modules:backend-dossiermgt:backend-dossiermgt-api")
+	
 }
