--- a/modules/backend-gogoshell-tool/build.gradle
+++ b/modules/backend-gogoshell-tool/build.gradle
@@ -4,6 +4,7 @@ dependencies {
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "3.0.0"
     compileOnly group: "javax.portlet", name: "portlet-api", version: "3.0.0"
     compileOnly group: "org.apache.felix", name: "org.apache.felix.gogo.runtime", version: "1.0.6"
+    compile group: 'commons-io', name: 'commons-io', version: '2.6'
     
     compileOnly project(":modules:backend-usermgt:backend-usermgt-api")
 	compileOnly project(":modules:backend-usermgt:backend-usermgt-service")
