--- a/modules/backend-api-rest/src/main/resources/content/Language.properties
+++ b/modules/backend-api-rest/src/main/resources/content/Language.properties
@@ -143,4 +143,4 @@ system.message.stepconfigerror           = Thi\u1EBFu c\u1EA5u h\u00ECnh StepCon
 
 template.filename = templates/%s.xml
 
-vgca.urlpath = %s://%d%s
+vgca.urlpath = %s://%s:%d%s
