--- a/modules/backend-dossiermgt/backend-dossiermgt-service/build.gradle
+++ b/modules/backend-dossiermgt/backend-dossiermgt-service/build.gradle
@@ -29,6 +29,10 @@ dependencies {
 	compileOnly project(":modules:backend-admin-config:backend-admin-config-service")
 	// https://mvnrepository.com/artifact/org.apache.commons/commons-text
 	compileOnly group: 'org.apache.commons', name: 'commons-text', version: '1.8'
+	
+	compileOnly group :  "org.osgi", name: "org.osgi.core", version: "5.0.0"
+    compileOnly group :  "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"  
+       
 	testCompile group: "junit", name: "junit", version: "4.12"
 }	
 
