--- a/modules/opencps-esb-api-rest/build.gradle
+++ b/modules/opencps-esb-api-rest/build.gradle
@@ -43,8 +43,12 @@ dependencies {
 	//compileInclude name: 'guice-3.0', transitive:false
 	// https://mvnrepository.com/artifact/com.google.inject/guice
 	//compile group: 'com.google.inject', name: 'guice', version: '2.0'
-	compileOnly name: 'guava-14.0.1'
+	//compileOnly name: 'guava-14.0.1'
 	compile group: 'com.google.inject', name: 'guice', version: '4.2.1', transitive: false
+	compile group: 'com.google.guava', name: 'guava', version: '22.0', transitive: false
+	// https://mvnrepository.com/artifact/org.jdom/jdom2
+	compile group: 'org.jdom', name: 'jdom2', version: '2.0.6', transitive: false
+	
 }
 repositories {
 	flatDir {
