--- a/modules/backend-usermgt/backend-usermgt-service/build.gradle
+++ b/modules/backend-usermgt/backend-usermgt-service/build.gradle
@@ -27,6 +27,8 @@ dependencies {
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "2.0.0"
 	
 	compileInclude name : "simplecaptcha-1.2.1", transitive:false
+	compile group: 'com.maxmind.geoip2', name: 'geoip2', version: '2.12.0'
+	compile group: 'com.maxmind.db', name: 'maxmind-db', version: '1.2.2'
 }
 
 repositories {
