--- a/modules/backend-api-rest/src/main/resources/content/Language.properties
+++ b/modules/backend-api-rest/src/main/resources/content/Language.properties
@@ -80,7 +80,7 @@ dossiertemplate.message.notfound = No DossierTemplate was found
 eform.message.noeformexists       = No eform exits
 eform.message.secretkeynotsuccess = secretKey not success
 
-employee.profilepath = /image/user_%s/_portrait?img_id=%d&t=%d
+employee.profilepath = /image/user_%s/_portrait?img_id=%d&t=%s
 
 form.filename               = forms/%s.json
 form.template.part.filename = forms/%s_%s.json
