--- a/modules/servlet-filter/build.gradle
+++ b/modules/servlet-filter/build.gradle
@@ -4,7 +4,7 @@ dependencies {
 	compileOnly group: "biz.aQute.bnd", name: "biz.aQute.bndlib", version: "3.1.0"
 	compileOnly group: "com.liferay", name: "com.liferay.osgi.util", version: "3.0.0"
 	compileOnly group: "com.liferay", name: "com.liferay.portal.spring.extender", version: "2.0.0"
-	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "3.0.0"
+	//compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "3.0.0"
 	compileOnly group: "javax.portlet", name: "portlet-api", version: "3.0.0"
 	compileOnly group: "javax.servlet", name: "javax.servlet-api", version: "3.0.1"
 	compileOnly group: "javax.ws.rs", name: "javax.ws.rs-api", version: "2.0.1"
@@ -12,5 +12,18 @@ dependencies {
 	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
 	compileOnly group: 'commons-io', name: 'commons-io', version: '2.6'
 	compileOnly group: "com.liferay", name: "com.liferay.portal.dao.orm.custom.sql.api", version: "1.0.0"
+	
+	//compile group: 'com.liferay', name: 'com.liferay.portal.security.sso.cas.api', version: '4.0.4'
+	//compile group: 'com.liferay', name: 'com.liferay.portal.security.sso.cas.impl', version: '3.0.3'
+	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "4.38.2"
+	//compileOnly group: "biz.aQute.bnd", name: "biz.aQute.bndlib", version: "3.1.0"
+	//compile name : "cas-client-core-3.6.1", transitive:false
+    //compile name : "com.liferay.portal.security.exportimport.api-4.0.0", transitive:false
+    //compile name : "com.liferay.portal.configuration.metatype-2.0.15", transitive:false
 
 }
+//repositories {
+//    flatDir {
+//        dirs 'lib'
+//    }
+//}
