--- a/modules/pay-gate-integration/build.gradle
+++ b/modules/pay-gate-integration/build.gradle
@@ -21,7 +21,8 @@ dependencies {
 	compileOnly project(":modules:backend-dossiermgt:backend-dossiermgt-api")
 	compileOnly project(":modules:backend-dossiermgt:backend-dossiermgt-service")
 	compileOnly project(":modules:backend-communication:backend-communication-api")
-	
-	
-	
+	compileOnly project(":modules:pay-gate-integration-dvc:pay-gate-integration-dvc-api")
+	compileOnly project(":modules:pay-gate-integration-dvc:pay-gate-integration-dvc-service")
+	compileOnly project(":modules:backend-datamgt:backend-datamgt-api")
+	compileOnly project(":modules:backend-datamgt:backend-datamgt-service")
 }
