--- a/modules/opencps-esb-api-rest/src/main/resources/credentials.properties
+++ b/modules/opencps-esb-api-rest/src/main/resources/credentials.properties
@@ -1,7 +1,8 @@
 ## example key
-key=5dc13dc42d0ec9ab641852d9
-secret=A6MmQKvjSxy7H5GYolXBUu+0g7EDouN+e3jCOhu2u6ax
-
+#key=5dc13dc42d0ec9ab641852d9
+#secret=A6MmQKvjSxy7H5GYolXBUu+0g7EDouN+e3jCOhu2u6ax
+key=5f067d0ce4b0b36e78b24f40
+secret=A9lRX4R4K6U5/QvBrgQrYofPE1HG/+4L6EUSPF6Vc5d9
 
 
 
