--- a/modules/backend-auth/build.gradle
+++ b/modules/backend-auth/build.gradle
@@ -24,10 +24,22 @@ dependencies {
 	compileOnly group: 'commons-io', name: 'commons-io', version: '2.6'
 	compileOnly group: "com.liferay", name: "com.liferay.portal.dao.orm.custom.sql.api", version: "1.0.0"
 	compile group: 'org.apache.cxf', name: 'cxf-rt-frontend-jaxws', version: '3.3.4'
-	
+
+	testCompile group: "junit", name: "junit", version: "4.12"
 }
 repositories {
     flatDir {
         dirs 'lib'
     }
+}
+
+test {
+	reports {
+		junitXml.enabled = true
+		html.enabled = true
+	}
+}
+
+configurations {
+    testCompile.extendsFrom compileOnly
 }
