--- a/modules/backend-usermgt/backend-usermgt-service/build.gradle
+++ b/modules/backend-usermgt/backend-usermgt-service/build.gradle
@@ -27,7 +27,7 @@ dependencies {
 	
 	compileOnly group: "javax.ws.rs", name: "javax.ws.rs-api", version: "2.0.1"
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
-	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "2.0.0"
+	//compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "2.0.0"
 	
 	compileInclude name : "simplecaptcha-1.2.1", transitive:false
 	compile group: 'com.maxmind.geoip2', name: 'geoip2', version: '2.12.0'
