--- a/modules/backend-statistic-service/backend-statistic-service-service/build.gradle
+++ b/modules/backend-statistic-service/backend-statistic-service-service/build.gradle
@@ -11,6 +11,9 @@ dependencies {
 	compileOnly group: 'javax.validation', name: 'validation-api', version: '1.1.0.Final'
 	compileOnly group: 'com.liferay', name: 'com.liferay.petra.string', version: '2.0.1'
 	
+	// https://mvnrepository.com/artifact/com.liferay/com.liferay.portal.upgrade.api
+	compileOnly group: 'com.liferay', name: 'com.liferay.portal.upgrade.api', version: '2.0.0'
+	
 	compile "com.liferay:com.liferay.osgi.service.tracker.collections:2.0.0"
 }
 
