Thêm upgrade database

--- a/modules/backend-communication/backend-communication-service/build.gradle
+++ b/modules/backend-communication/backend-communication-service/build.gradle
@@ -16,6 +16,7 @@ dependencies {
 	compile group: 'wsdl4j', name: 'wsdl4j', version: '1.6.2'
 	compileOnly group: "javax.ws.rs", name: "javax.ws.rs-api", version: "2.0.1"
 	compileOnly group: "javax.mail", name: "mail", version: "1.4"
+	compileOnly group: 'com.liferay', name: 'com.liferay.portal.upgrade.api', version: '2.0.0'
 	
 	compileOnly project(":modules:backend-communication:backend-communication-api")
 	compileOnly project(":modules:backend-auth")
