--- a/modules/backend-admin-config/backend-admin-config-service/build.gradle
+++ b/modules/backend-admin-config/backend-admin-config-service/build.gradle
@@ -12,6 +12,8 @@ dependencies {
 	compileOnly group: 'org.springframework', name: 'spring-dao', version: '2.0.8'
 	compileOnly group: "org.springframework", name: "spring-webmvc-portlet", version: "4.1.9.RELEASE"
 	compileOnly group: "javax.portlet", name: "portlet-api", version: "3.0.0"
+	
+	compileOnly group: 'com.liferay', name: 'com.liferay.portal.upgrade.api', version: '2.0.0'
 }
 
 buildService {
