--- a/wars/opencps-store/build.gradle
+++ b/wars/opencps-store/build.gradle
@@ -1,4 +1,5 @@
-buildscript {
+
+/*buildscript {
 	dependencies {
 		classpath group: "com.liferay", name: "com.liferay.gradle.plugins.theme.builder", version: "2.0.7"
 	}
@@ -20,3 +21,4 @@ dependencies {
 
 	themeBuilder group: "com.liferay", name: "com.liferay.portal.tools.theme.builder", version: "1.1.5"
 }
+*/
