--- a/modules/backend-api-rest/src/main/resources/content/Language.properties
+++ b/modules/backend-api-rest/src/main/resources/content/Language.properties
@@ -127,6 +127,7 @@ sms.message.zaloapiurl        = https://openapi.zalo.me
 statistic.message.coming  = S\u1EAFp \u0111\u1EBFn h\u1EA1n
 statistic.message.delay   = Ch\u1EADm h\u1EA1n
 statistic.message.overdue = Qu\u00E1 h\u1EA1n
+statistic.message.overtime = Hoàn thành tr\u1EC5 h\u1EA1n
 
 system.message.actionconfigmissingerror  = Thi\u1EBFu c\u1EA5u h\u00ECnh ActionConfig
 system.message.configerror               = D\u1EEF li\u1EC7u c\u1EA5u h\u00ECnh c\u00F3 l\u1ED7i!
