--- a/wars/v1/build.gradle
+++ b/wars/v1/build.gradle
@@ -17,6 +17,9 @@ dependencies {
 	compileOnly group: "javax.servlet", name: "javax.servlet-api", version: "3.0.1"
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
 	compileOnly group: 'com.liferay', name: 'com.liferay.petra.string', version: '2.0.1'
+	//compileOnly group: 'com.liferay', name: 'com.liferay.petra.mail', version: '2.0.1'
+	compileOnly group: 'javax.mail', name: 'mail', version: '1.4.7'
+	compileOnly group: "biz.aQute.bnd", name: "biz.aQute.bndlib", version: "3.5.0"
 	
 	compileOnly group: "org.osgi", name: "osgi.cmpn", version: "6.0.0"
 	compileOnly group: "org.osgi", name: "org.osgi.core", version: "6.0.0"
@@ -27,6 +30,8 @@ dependencies {
 	compile group: 'commons-io', name: 'commons-io', version: '2.6'
 	compileOnly group: 'io.swagger', name: 'swagger-annotations', version: '1.5.21'
 	compileOnly group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.9.8'
+	compileOnly group: 'com.liferay', name: 'com.liferay.portal.security.sso.openid.connect.api', version: '2.1.0'
+	compileOnly group: 'com.nimbusds', name: 'oauth2-oidc-sdk', version: '5.63'
 	
 	compile 'com.graphql-java:graphql-java:3.0.0'
     compile "com.graphql-java:graphql-java-annotations:0.13.1"
