BQP : Danh sách lĩnh vực + Danh sách cơ quan đơn vị

--- a/modules/backend-datamgt/backend-datamgt-service/build.gradle
+++ b/modules/backend-datamgt/backend-datamgt-service/build.gradle
@@ -10,6 +10,7 @@ dependencies {
 
 	compileOnly project(":modules:backend-datamgt:backend-datamgt-api")
 	compileOnly project(":modules:backend-auth")
+	compileOnly project(":modules:backend-dossiermgt:backend-dossiermgt-api")
 }
 
 buildService {
