--- a/modules/backend-usermgt/backend-usermgt-service/build.gradle
+++ b/modules/backend-usermgt/backend-usermgt-service/build.gradle
@@ -33,6 +33,16 @@ dependencies {
 	compile group: 'com.maxmind.geoip2', name: 'geoip2', version: '2.12.0'
 	compile group: 'com.maxmind.db', name: 'maxmind-db', version: '1.2.2'
 	compile group: 'org.springframework.mobile', name: 'spring-mobile-device', version: '1.1.5.RELEASE'
+	
+	//compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.9.0'
+	compileInclude name : "gson-2.8.5", transitive:false
+	//compileInclude name : "okhttp-4.9.0", transitive:false
+	compileInclude name : "kotlin-stdlib-1.3.72", transitive:false
+	compileInclude name : "kotlin-stdlib-common-1.3.72", transitive:false
+	compileInclude name : "okio-2.7.0", transitive:false
+	compileInclude name : "org.apache.servicemix.bundles.okhttp-4.8.1_1", transitive:false
+	
+	compile group: 'org.apache.servicemix.bundles', name: 'org.apache.servicemix.bundles.okhttp', version: '4.8.1_1'
 }
 
 repositories {
