--- a/modules/backend-admin-config/backend-admin-config-api/build.gradle
+++ b/modules/backend-admin-config/backend-admin-config-api/build.gradle
@@ -2,5 +2,9 @@ dependencies {
 	compileOnly group: "biz.aQute.bnd", name: "biz.aQute.bndlib", version: "3.5.0"
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "3.0.0"
 	compileOnly group: "org.osgi", name: "org.osgi.core", version: "6.0.0"
+	
 	testCompile group: "junit", name: "junit", version: "4.12"
+	testCompile group: "biz.aQute.bnd", name: "biz.aQute.bndlib", version: "3.5.0"
+	testCompile group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "3.0.0"
+	testCompile group: "org.osgi", name: "org.osgi.core", version: "6.0.0"
 }
