--- a/modules/backend-admin-config/backend-admin-config-service/build.gradle
+++ b/modules/backend-admin-config/backend-admin-config-service/build.gradle
@@ -12,6 +12,21 @@ dependencies {
 	compileOnly group: 'org.springframework', name: 'spring-dao', version: '2.0.8'
 	compileOnly group: "org.springframework", name: "spring-webmvc-portlet", version: "4.1.9.RELEASE"
 	compileOnly group: "javax.portlet", name: "portlet-api", version: "3.0.0"
+	
+	testCompile group: "junit", name: "junit", version: "4.12"
+	testCompile group: "biz.aQute.bnd", name: "biz.aQute.bndlib", version: "3.5.0"
+	testCompile group: "com.liferay", name: "com.liferay.portal.spring.extender", version: "2.0.0"
+	testCompile group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "3.0.0"
+	testCompile project(":modules:backend-admin-config:backend-admin-config-api")
+	testCompile project(":modules:backend-admin-config:backend-admin-config-service")
+	testCompile group: "javax.websocket", name: "javax.websocket-api", version: "1.1"
+	testCompile group: "org.osgi", name: "osgi.cmpn", version: "6.0.0"
+	testCompile group: "org.osgi", name: "org.osgi.core", version: "6.0.0"
+	testCompile group: "javax.servlet", name: "javax.servlet-api", version: "3.0.1"
+	testCompile group: 'com.liferay', name: 'com.liferay.petra.string', version: '2.0.1'
+	testCompile group: 'org.springframework', name: 'spring-dao', version: '2.0.8'
+	testCompile group: "org.springframework", name: "spring-webmvc-portlet", version: "4.1.9.RELEASE"
+	testCompile group: "javax.portlet", name: "portlet-api", version: "3.0.0"
 }
 
 buildService {
