--- a/modules/backend-cache-builder/backend-cache-builder-api/build.gradle
+++ b/modules/backend-cache-builder/backend-cache-builder-api/build.gradle
@@ -7,4 +7,5 @@ dependencies {
 	compile group: 'redis.clients', name: 'jedis', version: '2.9.0'
 
 	compile group: 'org.apache.commons', name: 'commons-pool2', version: '2.5.0'
+	testCompile group: "junit", name: "junit", version: "4.12"
 }
