--- a/modules/backend-cache-builder/backend-cache-builder-service/build.gradle
+++ b/modules/backend-cache-builder/backend-cache-builder-service/build.gradle
@@ -13,6 +13,7 @@ dependencies {
 	// https://mvnrepository.com/artifact/org.apache.commons/commons-pool2
 	compileInclude group: 'org.apache.commons', name: 'commons-pool2', version: '2.5.0'
 	compileInclude group: 'cglib', name: 'cglib', version: '2.2.2'
+	testCompile group: "junit", name: "junit", version: "4.12"
 }
 
 buildService {
