--- a/modules/backend-communication/backend-communication-service/build.gradle
+++ b/modules/backend-communication/backend-communication-service/build.gradle
@@ -17,6 +17,7 @@ dependencies {
 	
 	compileOnly project(":modules:backend-communication:backend-communication-api")
 	compileOnly project(":modules:backend-auth")
+	testCompile group: "junit", name: "junit", version: "4.12"
 }
 
 buildService {
