--- a/modules/backend-dossiermgt/backend-dossiermgt-api/build.gradle
+++ b/modules/backend-dossiermgt/backend-dossiermgt-api/build.gradle
@@ -13,4 +13,5 @@ dependencies {
 	compile group: 'org.apache.cxf', name: 'cxf-rt-frontend-jaxrs', version: '3.0.3'
 	compile group: 'org.apache.cxf', name: 'cxf-rt-transports-http', version: '3.0.3'
 	compile group: 'org.apache.cxf', name: 'cxf-rt-rs-client', version: '3.0.3'
+	testCompile group: "junit", name: "junit", version: "4.12"
 }
