--- a/modules/backend-feedback/backend-feedback-api/build.gradle
+++ b/modules/backend-feedback/backend-feedback-api/build.gradle
@@ -4,4 +4,5 @@ dependencies {
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "3.0.0"
 	compileOnly group: "org.osgi", name: "org.osgi.core", version: "6.0.0"
 	compileOnly project(":modules:backend-auth")
+	testCompile group: "junit", name: "junit", version: "4.12"
 }
