--- a/modules/backend-feedback/backend-feedback-service/build.gradle
+++ b/modules/backend-feedback/backend-feedback-service/build.gradle
@@ -16,6 +16,7 @@ dependencies {
 	compileOnly project(":modules:backend-dossiermgt:backend-dossiermgt-service")
 
 	compileOnly project(":modules:backend-auth")
+	testCompile group: "junit", name: "junit", version: "4.12"
 }
 
 buildService {
