--- a/modules/backend-gogoshell-tool/build.gradle
+++ b/modules/backend-gogoshell-tool/build.gradle
@@ -17,5 +17,5 @@ dependencies {
 	
 	compileOnly project(":modules:backend-dossiermgt:backend-dossiermgt-service")
 	compileOnly project(":modules:backend-dossiermgt:backend-dossiermgt-api")
-	
+	testCompile group: "junit", name: "junit", version: "4.12"
 }
