--- a/modules/backend-postal-api-rest/build.gradle
+++ b/modules/backend-postal-api-rest/build.gradle
@@ -37,7 +37,7 @@ dependencies {
 	compileOnly project(":modules:backend-communication:backend-communication-api")
 	compileOnly project(":modules:backend-usermgt:backend-usermgt-service")
 	compileOnly project(":modules:backend-usermgt:backend-usermgt-api")
-	
+	testCompile group: "junit", name: "junit", version: "4.12"
 	compileOnly name: 'VNPostNGSPSDK'
 	compileOnly name: 'gson-2.8.0'
 }
