--- a/modules/backend-statistic-common/build.gradle
+++ b/modules/backend-statistic-common/build.gradle
@@ -9,4 +9,5 @@ dependencies {
 	compile "org.springframework.boot:spring-boot-starter-web-services:1.5.6.RELEASE"
 	compile "org.apache.commons:commons-lang3:3.7"
 	compile "org.slf4j:slf4j-api:1.7.25"
+	testCompile group: "junit", name: "junit", version: "4.12"
 }
