--- a/modules/backend-statistic-rest/build.gradle
+++ b/modules/backend-statistic-rest/build.gradle
@@ -44,6 +44,7 @@ dependencies {
 	
 	compileOnly project(":modules:backend-usermgt:backend-usermgt-service")
 	compileOnly project(":modules:backend-usermgt:backend-usermgt-api")	
+	testCompile group: "junit", name: "junit", version: "4.12"
 }
 repositories {
     flatDir {
