--- a/modules/backend-statistic-service/backend-statistic-service-api/build.gradle
+++ b/modules/backend-statistic-service/backend-statistic-service-api/build.gradle
@@ -3,4 +3,5 @@ dependencies {
 	compileOnly group: "com.liferay", name: "com.liferay.osgi.util", version: "3.0.0"
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "3.0.0"
 	compileOnly group: "org.osgi", name: "org.osgi.core", version: "6.0.0"
+	testCompile group: "junit", name: "junit", version: "4.12"
 }
