--- a/modules/backend-statistic-service/backend-statistic-service-service/build.gradle
+++ b/modules/backend-statistic-service/backend-statistic-service-service/build.gradle
@@ -12,6 +12,7 @@ dependencies {
 	compileOnly group: 'com.liferay', name: 'com.liferay.petra.string', version: '2.0.1'
 	
 	compile "com.liferay:com.liferay.osgi.service.tracker.collections:2.0.0"
+	testCompile group: "junit", name: "junit", version: "4.12"
 }
 
 buildService {
