--- a/modules/backend-usermgt/backend-usermgt-api/build.gradle
+++ b/modules/backend-usermgt/backend-usermgt-api/build.gradle
@@ -7,4 +7,5 @@ dependencies {
 	compileOnly group: "javax.servlet", name: "javax.servlet-api", version: "3.0.1"
 	compileOnly project(":modules:backend-datamgt:backend-datamgt-api")
 	compileOnly project(":modules:backend-auth")
+	testCompile group: "junit", name: "junit", version: "4.12"
 }
