--- a/modules/backend-usermgt/backend-usermgt-service/build.gradle
+++ b/modules/backend-usermgt/backend-usermgt-service/build.gradle
@@ -30,6 +30,7 @@ dependencies {
 	compile group: 'com.maxmind.geoip2', name: 'geoip2', version: '2.12.0'
 	compile group: 'com.maxmind.db', name: 'maxmind-db', version: '1.2.2'
 	compile group: 'org.springframework.mobile', name: 'spring-mobile-device', version: '1.1.5.RELEASE'
+	testCompile group: "junit", name: "junit", version: "4.12"
 }
 
 repositories {
