--- a/modules/backend-zalo-hook/build.gradle
+++ b/modules/backend-zalo-hook/build.gradle
@@ -23,6 +23,8 @@ dependencies {
 	
 	compile name : "VNPostNGSPSDK", transitive:false
 	compile name : "gson-2.8.0", transitive:false
+	
+	testCompile group: "junit", name: "junit", version: "4.12"
 }
 
 repositories {
