--- a/modules/opencps-hook/build.gradle
+++ b/modules/opencps-hook/build.gradle
@@ -3,4 +3,6 @@ dependencies {
 	compileOnly group: "org.osgi", name: "osgi.cmpn", version: "6.0.0"
 	compileOnly group: "javax.portlet", name: "portlet-api", version: "3.0.0"
 	compileOnly group: "javax.servlet", name: "javax.servlet-api", version: "3.0.1"
+	
+	testCompile group: "junit", name: "junit", version: "4.12"
 }
