--- a/modules/opencps-smsprocess/opencps-smsprocess-service/build.gradle
+++ b/modules/opencps-smsprocess/opencps-smsprocess-service/build.gradle
@@ -15,6 +15,8 @@ dependencies {
 	compileOnly project(":modules:opencps-smsprocess:opencps-smsprocess-api")
 	compileOnly project(":modules:backend-statistic-common")
 	
+	testCompile group: "junit", name: "junit", version: "4.12"
+	
 }
 
 buildService {
