--- a/modules/pay-gate-integration/build.gradle
+++ b/modules/pay-gate-integration/build.gradle
@@ -22,6 +22,6 @@ dependencies {
 	compileOnly project(":modules:backend-dossiermgt:backend-dossiermgt-service")
 	compileOnly project(":modules:backend-communication:backend-communication-api")
 	
-	
+	testCompile group: "junit", name: "junit", version: "4.12"
 	
 }
