--- a/modules/react-login/build.gradle
+++ b/modules/react-login/build.gradle
@@ -10,4 +10,5 @@ dependencies {
 	
 	compileOnly project(":modules:backend-usermgt:backend-usermgt-api")
 	compileOnly project(":modules:backend-usermgt:backend-usermgt-service")
+	testCompile group: "junit", name: "junit", version: "4.12"
 }
