--- a/modules/servlet-filter/build.gradle
+++ b/modules/servlet-filter/build.gradle
@@ -13,6 +13,8 @@ dependencies {
 	compileOnly group: 'commons-io', name: 'commons-io', version: '2.6'
 	compileOnly group: "com.liferay", name: "com.liferay.portal.dao.orm.custom.sql.api", version: "1.0.0"
 	
+	testCompile group: "junit", name: "junit", version: "4.12"
+	
 	//compile group: 'com.liferay', name: 'com.liferay.portal.security.sso.cas.api', version: '4.0.4'
 	//compile group: 'com.liferay', name: 'com.liferay.portal.security.sso.cas.impl', version: '3.0.3'
 	//compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "4.38.2"
