--- a/modules/backend-feedback/backend-feedback-api/build.gradle
+++ b/modules/backend-feedback/backend-feedback-api/build.gradle
@@ -5,4 +5,10 @@ dependencies {
 	compileOnly group: "org.osgi", name: "org.osgi.core", version: "6.0.0"
 	compileOnly project(":modules:backend-auth")
 	testCompile group: "junit", name: "junit", version: "4.12"
+	
+	testCompile group: "biz.aQute.bnd", name: "biz.aQute.bndlib", version: "3.1.0"
+	testCompile group: "com.liferay", name: "com.liferay.osgi.util", version: "3.0.0"
+	testCompile group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "3.0.0"
+	testCompile group: "org.osgi", name: "org.osgi.core", version: "6.0.0"
+	testCompile project(":modules:backend-auth")
 }
