--- a/modules/backend-feedback/backend-feedback-service/build.gradle
+++ b/modules/backend-feedback/backend-feedback-service/build.gradle
@@ -17,6 +17,24 @@ dependencies {
 
 	compileOnly project(":modules:backend-auth")
 	testCompile group: "junit", name: "junit", version: "4.12"
+	
+	testCompile group: "biz.aQute.bnd", name: "biz.aQute.bndlib", version: "3.1.0"
+	testCompile group: "com.liferay", name: "com.liferay.osgi.util", version: "3.0.0"
+	testCompile group: "com.liferay", name: "com.liferay.portal.spring.extender", version: "2.0.0"
+	testCompile group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "3.0.0"
+	testCompile group: "javax.portlet", name: "portlet-api", version: "2.0"
+	testCompile group: "javax.servlet", name: "javax.servlet-api", version: "3.0.1"
+	testCompile group: "javax.ws.rs", name: "javax.ws.rs-api", version: "2.0.1"
+	testCompile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
+	testCompile group: 'com.liferay', name: 'com.liferay.petra.string', version: '2.0.1'
+
+	testCompile project(":modules:backend-feedback:backend-feedback-api")
+	testCompile project(":modules:backend-usermgt:backend-usermgt-api")
+	testCompile project(":modules:backend-usermgt:backend-usermgt-service")
+	testCompile project(":modules:backend-dossiermgt:backend-dossiermgt-api")
+	testCompile project(":modules:backend-dossiermgt:backend-dossiermgt-service")
+
+	testCompile project(":modules:backend-auth")
 }
 
 buildService {
