--- a/modules/backend-gogoshell-tool/build.gradle
+++ b/modules/backend-gogoshell-tool/build.gradle
@@ -18,4 +18,23 @@ dependencies {
 	compileOnly project(":modules:backend-dossiermgt:backend-dossiermgt-service")
 	compileOnly project(":modules:backend-dossiermgt:backend-dossiermgt-api")
 	testCompile group: "junit", name: "junit", version: "4.12"
+	
+	testCompile group: "org.osgi", name: "org.osgi.core", version: "6.0.0"
+	testCompile group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
+	testCompile group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "3.0.0"
+    testCompile group: "javax.portlet", name: "portlet-api", version: "3.0.0"
+    testCompile group: "org.apache.felix", name: "org.apache.felix.gogo.runtime", version: "1.0.6"
+    testCompile group: 'commons-io', name: 'commons-io', version: '2.6'
+    
+	testCompile group: "de.vandermeer", name: "asciitable", version: "0.3.2"
+	testCompile group: "org.fusesource.jansi", name: "jansi", version: "1.16"
+	testCompile group: "com.liferay", name: "com.liferay.petra.string", version: "3.0.0"
+	testCompile group: "org.osgi", name: "org.osgi.annotation.versioning", version: "1.1.0"
+	testCompile group: 'org.antlr', name: 'stringtemplate', version: '3.2'
+    
+    testCompile project(":modules:backend-usermgt:backend-usermgt-api")
+	testCompile project(":modules:backend-usermgt:backend-usermgt-service")
+	
+	testCompile project(":modules:backend-dossiermgt:backend-dossiermgt-service")
+	testCompile project(":modules:backend-dossiermgt:backend-dossiermgt-api")
 }
