--- a/modules/backend-kyso-process/backend-kyso-process-service/build.gradle
+++ b/modules/backend-kyso-process/backend-kyso-process-service/build.gradle
@@ -31,7 +31,7 @@ dependencies {
 	
 	compileOnly project(":modules:backend-communication:backend-communication-service")
 	compileOnly project(":modules:backend-communication:backend-communication-api")
-	testCompile group: "junit", name: "junit", version: "4.12"
+	
 	compile name : "vgca.svrsigner"
 	compile name : "bcpkix"
 	compile name : "bcprov"
@@ -40,6 +40,51 @@ dependencies {
 	compile name : "kysovanban"
 	compile name : "pdfbox"
 	compile name : "fontbox"
+	
+	
+	testCompile group: "junit", name: "junit", version: "4.12"
+	
+	testCompile group: "biz.aQute.bnd", name: "biz.aQute.bndlib", version: "3.1.0"
+	testCompile group: "javax.ws.rs", name: "javax.ws.rs-api", version: "2.0.1"
+	testCompile group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
+
+	testCompile group: "javax.portlet", name: "portlet-api", version: "3.0.0"
+	testCompile group: "javax.servlet", name: "javax.servlet-api", version: "3.0.1"
+	testCompile group: "com.liferay", name: "com.liferay.osgi.util", version: "3.0.0"
+	testCompile group: "com.liferay", name: "com.liferay.portal.spring.extender", version: "2.0.0"
+	testCompile group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "3.0.0"
+	testCompile group: 'com.liferay', name: 'com.liferay.petra.string', version: '2.0.1'
+
+	testCompile group: 'org.apache.cxf', name: 'cxf-rt-frontend-jaxws', version: '3.0.3'
+	testCompile group: 'org.apache.cxf', name: 'cxf-rt-frontend-jaxrs', version: '3.0.3'
+	testCompile group: 'org.apache.cxf', name: 'cxf-rt-transports-http', version: '3.0.3'
+	testCompile group: 'org.springframework', name: 'spring-context', version: '3.2.6.RELEASE'
+	testCompile group: 'org.springframework', name: 'spring-core', version: '3.2.6.RELEASE'
+	testCompile group: 'org.springframework', name: 'spring-orm', version: '3.2.6.RELEASE'
+	testCompile group: 'org.springframework', name: 'spring-webmvc', version: '3.2.6.RELEASE'
+	testCompile group: 'org.apache.cxf', name: 'cxf-rt-rs-client', version: '3.0.3'
+	testCompile group: 'commons-httpclient', name: 'commons-httpclient', version: '3.0.1'
+	testCompile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.3.1'
+	testCompile group: 'org.apache.httpcomponents', name: 'httpcore', version: '4.3.1'
+	testCompile group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.3.1'
+	testCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
+	testCompile group: 'io.swagger', name: 'swagger-jaxrs', version: '1.5.10'
+
+	testCompile group: "org.osgi", name: "org.osgi.service.jaxrs", version: "1.0.0"
+
+	testCompile project(":modules:backend-kyso-process:backend-kyso-process-api")
+	
+	testCompile project(":modules:backend-communication:backend-communication-service")
+	testCompile project(":modules:backend-communication:backend-communication-api")
+	
+	testCompile name : "vgca.svrsigner"
+	testCompile name : "bcpkix"
+	testCompile name : "bcprov"
+	testCompile name : "itextpdf"
+	testCompile name : "opencpspki"
+	testCompile name : "kysovanban"
+	testCompile name : "pdfbox"
+	testCompile name : "fontbox"
 }	
 
 repositories {
