--- a/modules/backend-kyso-process/backend-kyso-process-service/build.gradle
+++ b/modules/backend-kyso-process/backend-kyso-process-service/build.gradle
@@ -43,6 +43,7 @@ dependencies {
 	compile name : "ViettelFileSigner-v2"
 	compile name : "additionalbouncycastle"
 	compile name : "xmlsec-1.3.0"
+	compile name : "itextpdf-5.5.0"
 }	
 
 repositories {
