--- a/modules/servlet-filter/build.gradle
+++ b/modules/servlet-filter/build.gradle
@@ -13,6 +13,9 @@ dependencies {
 	compileOnly group: 'commons-io', name: 'commons-io', version: '2.6'
 	compileOnly group: "com.liferay", name: "com.liferay.portal.dao.orm.custom.sql.api", version: "1.0.0"
 	
+	//compileInclude group: "org.jasig.cas.client", name: "cas-client-core", version: "3.1.12"
+	//compileOnly group: "com.liferay", name: "com.liferay.portal.security.sso.cas.api", version: "3.0.0"
+	
 	//compile group: 'com.liferay', name: 'com.liferay.portal.security.sso.cas.api', version: '4.0.4'
 	//compile group: 'com.liferay', name: 'com.liferay.portal.security.sso.cas.impl', version: '3.0.3'
 	//compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "4.38.2"
