--- a/modules/backend-kyso-process/backend-kyso-process-service/build.gradle
+++ b/modules/backend-kyso-process/backend-kyso-process-service/build.gradle
@@ -31,6 +31,8 @@ dependencies {
 	
 	compileOnly project(":modules:backend-communication:backend-communication-service")
 	compileOnly project(":modules:backend-communication:backend-communication-api")
+	compileOnly project(":modules:backend-dossiermgt:backend-dossiermgt-service")
+	compileOnly project(":modules:backend-dossiermgt:backend-dossiermgt-api")
 	
 	compile name : "vgca.svrsigner"
 	compile name : "bcpkix"
