--- a/modules/backend-dossiermgt/backend-dossiermgt-service/build.gradle
+++ b/modules/backend-dossiermgt/backend-dossiermgt-service/build.gradle
@@ -36,8 +36,14 @@ dependencies {
     compileOnly group :  "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"  
        
 	testCompile group: "junit", name: "junit", version: "4.12"
-}	
+	compileInclude name : "JAVA-SDK-VXP-2.0.4", transitive:false
+}
 
+repositories {
+	flatDir {
+		dirs 'lib'
+	}
+}
 buildService {
 	apiDir = "../backend-dossiermgt-api/src/main/java"
 }
