--- a/wars/dvcqg-sso/src/main/webapp/WEB-INF/web.xml
+++ b/wars/dvcqg-sso/src/main/webapp/WEB-INF/web.xml
@@ -21,10 +21,20 @@
 		<servlet-name>MICSSOCallbackServlet</servlet-name>
 		<servlet-class>org.fds.opencps.dvcqg.authentication.MICSSOCallbackServlet</servlet-class>
 	</servlet>
+	
+	<servlet>
+		<servlet-name>SSOCSCallbackServlet</servlet-name>
+		<servlet-class>org.fds.opencps.dvcqg.authentication.SSOCSCallbackServlet</servlet-class>
+	</servlet>
 
 	<servlet-mapping>
 		<servlet-name>MICSSOCallbackServlet</servlet-name>
 		<url-pattern>/callbackMic</url-pattern>
+	</servlet-mapping>
+	
+	<servlet-mapping>
+		<servlet-name>SSOCSCallbackServlet</servlet-name>
+		<url-pattern>/ssocscallback</url-pattern>
 	</servlet-mapping>
 
 	<welcome-file-list>
@@ -34,11 +44,11 @@
 	<security-constraint>
 		<web-resource-collection>
 			<web-resource-name>
-JSP MVC Views
-</web-resource-name>
+				JSP MVC Views
+			</web-resource-name>
 			<url-pattern>
-*.jsp
-</url-pattern>
+				*.jsp
+			</url-pattern>
 		</web-resource-collection>
 		<auth-constraint>
 			<!-- Nobody is allowed to visit these -->
